force-app/main/default/objects/Merchandise__c/fields/Merchandise_Desc__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Desc__c</fullName>
    <description>Merchandise Desc</description>
    <inlineHelpText>Merchandise Desc</inlineHelpText>
    <label>Merchandise Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>