force-app/main/default/objects/Merchandise__c/fields/Merchandise_Price__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Price__c</fullName>
    <description>Merchandise Price</description>
    <inlineHelpText>Merchandise Price</inlineHelpText>
    <label>Merchandise Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>