force-app/main/default/objects/Merchandise__c/fields/Merchandise_Stock__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Stock__c</fullName>
    <description>Merchandise Stock</description>
    <inlineHelpText>Merchandise Stock</inlineHelpText>
    <label>Merchandise Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>