force-app/main/default/objects/Merchandise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Merchandise_Desc__c</columns>
    <columns>Merchandise_Price__c</columns>
    <columns>Merchandise_Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>