force-app/main/default/objects/Merchandise__c/listViews/My_List_View.listView-meta.xml
<ListView>
    <fullName>My_List_View</fullName>
    <columns>NAME</columns>
    <columns>Merchandise_Desc__c</columns>
    <columns>Merchandise_Price__c</columns>
    <columns>Merchandise_Stock__c</columns>
    <filterScope>Mine</filterScope>
    <label>My  List View</label>
</ListView>